# albot-backend

./: .env.development  .gitmodules  README.md  auth.py  constants.py  db_connection.py  envs.py  main.py  migration_progress.md  oauth2.py  pyproject.toml  requirements.txt  sessions.py
.github/workflows/: db-schema-compare.yml  schemathesis.yml
app/: constants.py  main.py
app/core/: auth.py  dependencies.py  error.py
app/db/: connection.py
app/models/: character_usage.py  custom_voices.py  quick_report.py  settings.py  shards.py  trusted_roles.py
app/schemas/: api_data.py  api_response.py  character_usage.py  checkout_session.py  connection_command.py  connection_state.py  guild_dict.py  guild_settings.py  message_link_expand_pref.py  metrics.py  oauth2.py  quick_report.py  settings.py  subscription.py  trusted_roles.py
app/services/: character_usages.py  connection_commands.py  connection_state.py  guild_dict.py  guild_resources.py  guild_settings.py  logs.py  message_link_expansion.py  metrics.py  quick_reports.py  shards.py  stripe.py  subscription.py  subscriptions.py  trusted_roles.py  user.py  (+3 more)
core/: auth.py  dependencies.py
docs/: deploy-pipeline.md  report-feature-specification.md
models/: database.py  discord_api.py  subscription.py
routes/: shards.py
schemas/: subscriptions.py
services/: character_usages.py  subscription.py  user.py
type_specifications/: api_payload.py  api_response.py  auth.py  database.py  discord_api.py
utils/: auth.py  db_connection.py  dependencies.py  discord_api.py  discord_oauth2.py  others.py  subscription.py
(+88 files in other folders)
