[project]
name = "albot-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.14",
    "asyncpg>=0.30.0",
    "fastapi==0.116.1",
    "itsdangerous==2.2.0",
    "python-dotenv==1.0.1",
    "sentry-sdk==3.0.0a2",
    "stripe==12.4.0b2",
    "uvicorn==0.32.0",
]
